2013-09-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix bug #2211, fix name of codegen struct (_G vs. G).

2013-09-04 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bitvars.c,
	  support/regression/tests/bool.c,
	  support/regression/tests/bug1057979.c,
	  support/regression/tests/bug1738367.c,
	  support/regression/tests/bug2084206.c,
	  support/regression/tests/bug2935162.c,
	  support/regression/tests/bug3183823.c,
	  support/regression/tests/bug3290691.c,
	  support/regression/tests/bug3467508.c,
	  support/regression/tests/bug3537338.c,
	  support/regression/tests/float_single.c,
	  support/regression/tests/gcc-torture-execute-20000412-2.c,
	  support/regression/tests/gcc-torture-execute-20030714-1.c,
	  support/regression/tests/gcc-torture-execute-990524-1.c,
	  support/regression/tests/gcc-torture-execute-pr15296.c,
	  support/regression/tests/gcc-torture-execute-string-opt-5.c,
	  support/regression/tests/genptrs.c,
	  support/regression/tests/muldiv.c,
	  support/regression/tests/onebyte.c,
	  support/regression/tests/snprintf.c:
	  Disable tests for the least-broken one of the broken ports.

2013-09-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/gcc-torture-execute-20020219-1.c,
	  support/regression/tests/gcc-torture-execute-20050104-1.c,
	  support/regression/tests/gcc-torture-execute-920810-1.c,
	  support/regression/tests/gcc-torture-execute-950612-1.c,
	  support/regression/tests/gcc-torture-execute-pr42269-2.c,
	  support/regression/tests/gcc-torture-execute-950915-1.c,
	  support/regression/tests/gcc-torture-execute-20080529-1.c:
	  Fix returning of long long.

2013-09-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Partial workaround for linker bug #2198.
	* support/regression/tests/bug-136564.c,
	  support/regression/tests/bug-927659.c,
	  support/regression/tests/bug1057979.c,
	  support/regression/tests/bug3521024.c,